# Google_test

./: README.md
GoogleTestWithLib/: CMakeLists.txt  testRunner.cpp
Gtest_Analysis_Practices/Practice1/: CMakeLists.txt
Gtest_Analysis_Practices/Practice1/_answer/: BankSystemTest_hint.cpp
Gtest_Analysis_Practices/Practice1/include/: BankSystem.hpp
Gtest_Analysis_Practices/Practice1/src/: BankSystem.cpp
Gtest_Analysis_Practices/Practice1/test/: BankSystemTest.cpp  log.py
Gtest_Analysis_Practices/Practice2/_answer/: UserTest_hint.cpp
Gtest_Analysis_Practices/Practice2/include/: Book.hpp
Gtest_Analysis_Practices/Practice2/test/: UserTest.cpp
Gtest_Analysis_Practices/Practice3/_answer/: DatabaseTest_Hint.cpp
Gtest_Analysis_Practices/Practice3/include/: Database.hpp  Transaction.hpp  Utils.hpp
Gtest_Analysis_Practices/Practice3/src/: User.cpp  Utils.cpp
Gtest_Analysis_Practices/Practice3/test/: DatabaseTest.cpp
Gtest_Analysis_Practices/Practice4/_answer/: HospitalTest_1_hint.cpp  HospitalTest_2_hint.cpp  HospitalTest_3_hint.cpp
Gtest_Analysis_Practices/Practice4/include/: Hospital.hpp
Gtest_Analysis_Practices/Practice4/src/: Hospital.cpp
Gtest_Analysis_Practices/Practice4/test/: HospitalTest_1.cpp  HospitalTest_2.cpp  HospitalTest_3.cpp
Library_Management_System/: .gitignore  CMakeLists.txt  README.md  make.sh
Library_Management_System/include/: Application.hpp  Library.hpp  Menu.hpp  Multithreading.hpp  Networking.hpp  Persistence.hpp  User.hpp
Library_Management_System/lib/: Application.cpp  Book.cpp  Database.cpp  Library.cpp  Menu.cpp  Multithreading.cpp  Networking.cpp  Persistence.cpp  Transaction.cpp  main.cpp
Library_Management_System/tests/software_test/: README.md
TeachingProject3/MathTestProject/: MathTestProject.vcxproj  test.cpp
TeachingProject3/MathTestProject/Release/: MathTestProject.exe.recipe  MathTestProject.vcxproj.FileListAbsolute.txt
TeachingProject3/MathTestProject/Release/MathTestProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
TeachingProject3/MyMathLib/Release/: MyMathLib.pch
TeachingProject3/MyMathLib/Release/MyMathLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  MyMathLib.lastbuildstate
TeachingProject3/Release/: MathTestProject.exe.gta.testdurations  MyMathLib.lib
TeachingProject3/TeachingProject3/Release/: TeachingProject3.exe.recipe  TeachingProject3.iobj  TeachingProject3.ipdb
TeachingProject3/TeachingProject3/Release/TeachingProject3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
